infra/k8s/webstore/service.yaml
# Webstore Service
apiVersion: v1
kind: Service
metadata:
 name: webstore
spec:
 selector:
 app: webstore
 ports:
 - protocol: TCP
 port:80
 targetPort:80
