infra/k8s/webstore/ingress.yaml
# Webstore Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: webstore-ingress
spec:
 rules:
 - host: webstore.local
 http:
 paths:
 - path: /
 pathType: Prefix
 backend:
 service:
 name: webstore
 port:
 number:80
